# obsidian-ai

./: .gitignore  README.md  main.py  pyproject.toml
src/: graph.py  monitor.py  run_workflow.py  state.py
src/config/: config.py
src/utils/: file_ops.py  logger.py  vault_explorer.py
